move preview port to vite.config

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -124,8 +124,8 @@
     "test": "vitest",
     "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=7000\" vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
-    "preview": "TST=321 npx import-meta-env -x .env && vite preview --port 5003",
-    "preview-remote": "TST=321 npx import-meta-env -x .env && BACKEND_URI=https://template.mcc-soft.de vite preview --port 5003",
+    "preview": "TST=321 npx import-meta-env -x .env && vite preview",
+    "preview-remote": "TST=321 npx import-meta-env -x .env && BACKEND_URI=https://template.mcc-soft.de vite preview",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /minimal",
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /minimal",
