--- a/webapi/Lib/Testing/MccSoft.Testing/MccSoft.Testing.csproj
+++ b/webapi/Lib/Testing/MccSoft.Testing/MccSoft.Testing.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
   <TargetFramework>net7.0</TargetFramework>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
