Update to .NET 8

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -35,7 +35,7 @@
         "Microsoft.EntityFrameworkCore.Database.Command": "Fatal",
         "Microsoft.EntityFrameworkCore.Update": "Fatal",
         "Microsoft.AspNetCore": "Warning",
-        "OpenIddict.Server.OpenIddictServerDispatcher": "Warning"
+        "OpenIddict": "Debug"
       }
     }
   },
