--- a/webapi/src/MccSoft.TemplateApp.Common/MccSoft.TemplateApp.Common.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Common/MccSoft.TemplateApp.Common.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-  <TargetFramework>net7.0</TargetFramework>
+  <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
-    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.1.1" />
-    <PackageReference Include="NJsonSchema" Version="10.9.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.3.0" />
+    <PackageReference Include="NJsonSchema" Version="11.0.0-preview008" />
   </ItemGroup>
 
   <ItemGroup>
