--- a/webapi/src/MccSoft.TemplateApp.Http/MccSoft.TemplateApp.Http.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Http/MccSoft.TemplateApp.Http.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-  <TargetFramework>net7.0</TargetFramework>
+  <TargetFramework>net8.0</TargetFramework>
     <Description>
       Provides access to the web API of the ServiceTemplate microservice.
     </Description>
@@ -14,7 +14,7 @@
   <ItemGroup>
     <PackageReference Include="JsonKnownTypes" Version="0.5.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
-    <PackageReference Include="NJsonSchema" Version="10.9.0" />
+    <PackageReference Include="NJsonSchema" Version="11.0.0-preview008" />
   </ItemGroup>
 
 
