CI: ability to deploy PROD to kubernetes

--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -190,7 +190,8 @@ stages:
           - deployment:
             environment:
               name: 'PROD'
-              resourceType: VirtualMachine
+              ${{ if ne(variables.DEPLOY_KUBERNETES, true) }}:
+                resourceType: VirtualMachine
             strategy:
               runOnce:
                 deploy:
