File saving API

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -67,5 +67,6 @@
     "SiteUrl": "https://localhost:5003"
   },
   "MiniProfilerEnabled": true,
-  "TestApiEnabled": true
+  "TestApiEnabled": true,
+  "DefaultFileStorage": "./files"
 }
