--- a/.ci/steps/azure-pipelines-tests.yml
+++ b/.ci/steps/azure-pipelines-tests.yml
@@ -6,7 +6,7 @@ steps:
 
   - script: |
       cd scripts/integresql
-      docker-compose up -d
+      docker compose up -d
     displayName: 'run integresql'
 
   - task: DotNetCoreCLI@2
