--- a/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
+++ b/webapi/Lib/WebApi/MccSoft.WebApi/MccSoft.WebApi.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
     <PackageReference Include="Vp.Roslyn.Analyzers.All" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
@@ -15,18 +15,18 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.0" />
-    <PackageReference Include="NJsonSchema" Version="11.0.0-preview008" />
-    <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="5.0.1" />
-    <PackageReference Include="OpenIddict.Server" Version="5.0.1" />
-    <PackageReference Include="OpenIddict.AspNetCore" Version="5.0.1" />
-    <PackageReference Include="Sentry.AspNetCore" Version="3.41.3" />
-    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.3.0" />
-    <PackageReference Include="NSwag.AspNetCore" Version="14.0.0-preview012" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.8" />
+    <PackageReference Include="NJsonSchema" Version="11.0.2" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="5.8.0" />
+    <PackageReference Include="OpenIddict.Server" Version="5.8.0" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="5.8.0" />
+    <PackageReference Include="Sentry.AspNetCore" Version="4.10.2" />
+    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="7.1.0" />
+    <PackageReference Include="NSwag.AspNetCore" Version="14.1.0" />
   </ItemGroup>
 
   <ItemGroup>
