--- a/webapi/src/MccSoft.TemplateApp.Common/MccSoft.TemplateApp.Common.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Common/MccSoft.TemplateApp.Common.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.3.0" />
-    <PackageReference Include="NJsonSchema" Version="11.0.0-preview008" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="7.1.0" />
+    <PackageReference Include="NJsonSchema" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
