--- a/webapi/src/MccSoft.TemplateApp.Http/MccSoft.TemplateApp.Http.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Http/MccSoft.TemplateApp.Http.csproj
@@ -12,9 +12,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JsonKnownTypes" Version="0.5.5" />
+    <PackageReference Include="JsonKnownTypes" Version="0.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
-    <PackageReference Include="NJsonSchema" Version="11.0.0-preview008" />
+    <PackageReference Include="NJsonSchema" Version="11.0.2" />
   </ItemGroup>
 
 
