--- a/.ci/_stages/dev.env
+++ b/.ci/_stages/dev.env
@@ -1,4 +1,4 @@
 VIRTUAL_HOST=template.mcc-soft.de
 General__SiteUrl=https://template.mcc-soft.de
 TestApiEnabled=true
-Serilog_Loggly_Server=
+Serilog__Loggly__Server=
