--- a/webapi/src/MccSoft.TemplateApp.App/Dockerfile
+++ b/webapi/src/MccSoft.TemplateApp.App/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-noble-chiseled-extra
 USER root
 
 # we need gettext-base for envsubst to work
