do not publish storybook to avoid issues when build is re-run (https://github.com/microsoft/azure-pipelines-tasks/issues/12718)

--- a/.ci/steps/azure-pipelines-build.yml
+++ b/.ci/steps/azure-pipelines-build.yml
@@ -25,7 +25,7 @@ steps:
 
   - script: |
       yarn frontend build-scss-for-razor
-      SOURCEMAP=false yarn build-frontend 
+      SOURCEMAP=false yarn build-frontend
       yarn build-frontend
     displayName: 'build frontend'
 
@@ -45,8 +45,8 @@ steps:
           yarn frontend build-storybook
         displayName: 'build storybook'
 
-      - publish: './frontend/storybook-static'
-        artifact: 'storybook'
+#      - publish: './frontend/storybook-static'
+#        artifact: 'storybook'
 
       - script: |
           yarn copy-storybook
