cleanup, ability to start backend only (in launchsettings)

--- a/webapi/src/MccSoft.TemplateApp.App/Properties/launchSettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/Properties/launchSettings.json
@@ -9,6 +9,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       }
+    },
+    "BackendOnly": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:5001/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://*:5001",
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
