--- a/webapi/Lib/Logging/MccSoft.Logging/MccSoft.Logging.csproj
+++ b/webapi/Lib/Logging/MccSoft.Logging/MccSoft.Logging.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
     <PackageReference Include="Sentry.Serilog" Version="5.6.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.Loggly" Version="5.4.0" />
+    <PackageReference Include="Serilog.Sinks.OpenSearch" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
