remove extensive logging from Openiddict

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -34,8 +34,7 @@
         "Microsoft.EntityFrameworkCore": "Information",
         "Microsoft.EntityFrameworkCore.Database.Command": "Fatal",
         "Microsoft.EntityFrameworkCore.Update": "Fatal",
-        "Microsoft.AspNetCore": "Warning",
-        "OpenIddict": "Debug"
+        "Microsoft.AspNetCore": "Warning"
       }
     }
   },
