Update frontend packages, convert SVG usage, update SASS

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "src/*": ["src/*"]
+    },
     "typeRoots": ["types"],
     "baseUrl": "./src"
   },
