--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,17 @@
     "@emotion/styled": "11.11.0",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
-    "@mui/material": "5.15.12",
-    "@mui/styles": "5.15.12",
+    "@mui/base": "5.0.0-beta.38",
+    "@mui/material": "6.1.4",
+    "@mui/styles": "6.1.4",
     "@mui/x-date-pickers": "5.0.20",
     "@reduxjs/toolkit": "1.9.2",
     "@sentry/react": "7.37.1",
     "@sentry/tracing": "7.37.1",
-    "@tanstack/react-query": "5.17.12",
-    "@tanstack/react-query-persist-client": "5.17.12",
-    "@tanstack/react-table": "8.11.6",
-    "@types/react-paginate": "7.1.1",
+    "@tanstack/react-query": "5.80.7",
+    "@tanstack/react-query-persist-client": "5.80.7",
+    "@tanstack/react-table": "8.21.3",
+    "@types/react-paginate": "7.1.4",
     "axios": "1.9.0",
     "axios-auth-refresh": "3.3.6",
     "browser-tabs-lock": "1.3.0",
@@ -49,7 +50,7 @@
     "react-router-url-params": "0.8.5",
     "react-textarea-autosize": "8.3.4",
     "react-use": "17.4.0",
-    "react-window": "1.8.9",
+    "react-window": "1.8.11",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
     "superjson": "1.12.3",
@@ -73,10 +74,10 @@
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "26.0.15",
     "@types/node": "17.0.24",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/react-redux": "7.1.24",
-    "@types/react-window": "1.8.5",
+    "@types/react-window": "1.8.8",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "@vitejs/plugin-react": "4.5.1",
