--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,16 +59,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
+    "@chromatic-com/storybook": "4.0.0",
     "@import-meta-env/cli": "0.7.3",
     "@import-meta-env/unplugin": "0.6.2",
     "@mdx-js/react": "2.3.0",
-    "@storybook/addon-essentials": "7.0.6",
-    "@storybook/addon-interactions": "7.0.6",
-    "@storybook/addon-links": "7.0.6",
-    "@storybook/blocks": "7.0.6",
-    "@storybook/react": "7.0.6",
-    "@storybook/react-vite": "7.0.6",
-    "@storybook/testing-library": "0.1.0",
+    "@storybook/addon-docs": "9.0.12",
+    "@storybook/react-vite": "9.0.12",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -106,7 +102,7 @@
     "replace": "1.2.2",
     "rollup-plugin-visualizer": "6.0.1",
     "sass": "1.89.2",
-    "storybook": "7.0.6",
+    "storybook": "9.0.12",
     "typescript": "5.8.3",
     "vite": "6.3.5",
     "vite-plugin-mkcert": "1.17.8",
