--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -95,3 +95,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+*storybook.log
+storybook-static
