migrate to HttpOnly cookies for authentication

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -90,6 +90,7 @@
     },
     "Clients": {
       "web_client": {
+        "UseHttpOnlyCookies": true,
         "ClientId": "web_client",
         "AccessTokenLifetime": 3600,
         "RefreshTokenLifetime": 86400000,
