add uitests client

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -125,6 +125,19 @@
           "/auth/signout-callback",
           "/auth/signout-callback?popup=1"
         ]
+      },
+      "uitests": {
+        "ClientId": "uitests",
+        "AccessTokenLifetime": 3600,
+        "RefreshTokenLifetime": 86400000,
+        "Permissions": [
+          "ept:token",
+          "ept:logout",
+          "ept:end_session",
+          "gt:password",
+          "gt:refresh_token",
+          "rst:token"
+        ]
       }
     },
     "Password": {
