--- a/e2e/.env
+++ b/e2e/.env
@@ -2,5 +2,6 @@
 # Just don't commit .env.local (btw, it's in gitignore by default)
 #PROXY_HOST=localhost
 #PROXY_PORT=8888
+#BASE_URL=https://localhost:5003
 BASE_URL=https://template.mcc-soft.de
 STORYBOOK_URL=http://localhost:6006
