--- a/.ci/tests/e2e-branch/nginx.conf
+++ b/.ci/tests/e2e-branch/nginx.conf
@@ -17,6 +17,10 @@ http {
             proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_busy_buffers_size   512k;
+            proxy_buffers   4 512k;
+            proxy_buffer_size   256k;
         }
     }
 }
