--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,6 +9,8 @@ changesetBaseRefs:
   - origin/develop
   - upstream/develop
 
+compressionLevel: mixed
+
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.5.1.cjs
+yarnPath: .yarn/releases/yarn-4.9.2.cjs
