--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,9 @@
   "devDependencies": {
     "@babel/core": "7.20.12",
     "@chromatic-com/storybook": "4.0.0",
+    "@eslint/compat": "1.3.1",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.29.0",
     "@import-meta-env/cli": "0.7.3",
     "@import-meta-env/unplugin": "0.6.2",
     "@mdx-js/react": "2.3.0",
@@ -83,17 +86,17 @@
     "concurrently": "8.0.1",
     "cross-env": "7.0.3",
     "dotenv": "16.5.0",
-    "eslint": "8.26.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.3",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-no-null": "1.0.2",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.31.10",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-storybook": "0.6.10",
+    "eslint-plugin-prettier": "5.5.1",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-storybook": "9.0.13",
     "importmap-plugin": "0.8.0",
     "nock": "13.3.0",
     "prettier": "3.5.3",
