use vite-rolldown

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -103,11 +103,12 @@
     "react-devtools": "6.1.2",
     "redux-devtools-extension": "2.13.9",
     "replace": "1.2.2",
+    "rolldown-vite": "7.0.3",
     "rollup-plugin-visualizer": "6.0.1",
     "sass": "1.89.2",
     "storybook": "9.0.12",
     "typescript": "5.8.3",
-    "vite": "6.3.5",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-mkcert": "1.17.8",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "4.3.0",
