--- a/webapi/Lib/Logging/MccSoft.Logging/MccSoft.Logging.csproj
+++ b/webapi/Lib/Logging/MccSoft.Logging/MccSoft.Logging.csproj
@@ -1,18 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-  <TargetFramework>net9.0</TargetFramework>
+  <TargetFramework>net10.0</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Destructurama.JsonNet" Version="2.0.1" />
-    <PackageReference Include="Metalama.Framework" Version="2025.1.5" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
-    <PackageReference Include="Sentry.Serilog" Version="5.6.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageReference Include="Serilog.Sinks.Loggly" Version="5.4.0" />
-    <PackageReference Include="Serilog.Sinks.OpenSearch" Version="1.3.0" />
+    <PackageReference Include="Destructurama.JsonNet" />
+    <PackageReference Include="Metalama.Framework" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="Sentry.Serilog" />
+    <PackageReference Include="Serilog.AspNetCore" />
+    <PackageReference Include="Serilog.Sinks.Loggly" />
+    <PackageReference Include="Serilog.Sinks.OpenSearch" />
   </ItemGroup>
 
   <ItemGroup>
