--- a/webapi/src/MccSoft.TemplateApp.Common/MccSoft.TemplateApp.Common.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Common/MccSoft.TemplateApp.Common.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-  <TargetFramework>net9.0</TargetFramework>
+  <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
-    <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="7.3.0" />
-    <PackageReference Include="NJsonSchema" Version="11.3.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="NeinLinq.EntityFrameworkCore" />
+    <PackageReference Include="NJsonSchema" />
   </ItemGroup>
 
   <ItemGroup>
