--- a/webapi/src/MccSoft.TemplateApp.Domain/MccSoft.TemplateApp.Domain.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Domain/MccSoft.TemplateApp.Domain.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-  <TargetFramework>net9.0</TargetFramework>
+  <TargetFramework>net10.0</TargetFramework>
     <Version>1.0.0</Version>
     <PackageId>MccSoft.TemplateApp.Domain</PackageId>
     <Description>
@@ -17,10 +17,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JsonKnownTypes" Version="0.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
-    <PackageReference Include="Npgsql.Json.NET" Version="9.0.3" />
+    <PackageReference Include="JsonKnownTypes" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Npgsql.Json.NET" />
   </ItemGroup>
 
   <ItemGroup>
