remove sensitive data step 1

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -69,5 +69,16 @@
   },
   "MiniProfilerEnabled": true,
   "TestApiEnabled": true,
-  "DefaultFileStorage": "./files"
+  "DefaultFileStorage": "./files",
+  "Hangfire": {
+    "EnableDashboard": true,
+    "DashboardUser": "admin",
+    "DashboardPassword": "123"
+  },
+  "SignUrl": {
+    "Secret": "fDmp1K2YveBbfDmpfDmp1K2YveBbfDmp"
+  },
+  "Email": {
+    "Password": "871H2ZzBWAS5"
+  }
 }
