--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -1,4 +1,7 @@
-﻿{
+﻿// This file should not contain any secrets!!!
+// Please add secrets to K8S secrets ONLY!
+// Values used during development should be added to appsettings.Development.json
+{
   "Serilog": {
 //    "Loggly": {
 //      "Server": "logs-01.loggly.com",
@@ -150,7 +153,7 @@
   "Hangfire": {
     "EnableDashboard": false,
     "DashboardUser": "admin",
-    "DashboardPassword": "dfZ3yBsPdkm2"
+    "DashboardPassword": ""
   },
   "ExternalAuthentication": {
     "Microsoft": {
@@ -179,13 +182,13 @@
   },
   "DefaultUser": {
     "Username": "admin",
-      "Password": "BSjo1M8jU760"
+    "Password": ""
   },
   "Audit": {
     "Enabled": true
   },
   "SignUrl": {
-    "Secret": "fDmp1K2YveBbfDmpfDmp1K2YveBbfDmp"
+    "Secret": ""
   },
   "Email": {
     "SiteUrl": "https://templateapp.mcc-soft.de",
@@ -193,7 +196,7 @@
     "Port": 465,
     "IsSecureConnection": true,
     "Login": "mcc.template.app@gmail.com",
-    "Password": "871H2ZzBWAS5",
+    "Password": "",
     "From": "mcc.template.app@gmail.com",
     "FromName": "Template App"
   },
