CI: adjust for e2e tests in docker, adjustments towards removing sensitive data

--- a/.ci/tests/e2e-branch/docker-compose.yml
+++ b/.ci/tests/e2e-branch/docker-compose.yml
@@ -24,5 +24,6 @@ services:
       - branch.env
     volumes:
       - ./files:/files:rw
+      - ../../../webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json:/webapi/appsettings.Production.json
     expose:
       - 5000
